Fix text overflow problems

--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 20%;
+    width: 27%;
     height: 100%;
 }
 
@@ -36,8 +36,8 @@
 .output-results-holder {
     position: absolute;
     top: 0;
-    left: 20%;
-    width: 40%;
+    left: 27%;
+    width: 43%;
     height: 100%;
 }
 
@@ -58,8 +58,8 @@
 .output-filters {
     position: absolute;
     top: 0;
-    left: 60%;
-    width: 40%;
+    left: 70%;
+    width: 30%;
     height: 100%;
     background: #FFF;
 }
@@ -68,8 +68,8 @@
     position: absolute;
     top: 6em;
     left: 0;
+    width: 100%;
     bottom: 0;
-    right: 0;
     padding-left: 2em;
     padding-bottom: 1em;
     overflow-y: scroll;
@@ -136,7 +136,7 @@
 
 .loader {
     text-align: center;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 .filter-tree-node {
@@ -153,25 +153,65 @@
     color: #4CAF50;
 }
 
-.failed-requests-wrapper {
+.requests-info {
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 20%;
+    width: 100%;
     height: 4em;
-    background-color: #C62828;
+    background-color: #EF5350;
     color: #FFF;
     line-height: 2em;
     overflow: hidden;
 }
 
-.failed-requests {
-    padding-left: 0.5em;
-    border-bottom: 0.1em solid rgba(0, 0, 0, 0.12);
+.requests-info-title {
+    display: inline-block;
+    height: 4em;
+    line-height: 4em;
+    text-align: center;
+    width: 33.333%;
+    background-color: #EF5350;
 }
 
-.num-failed {
-    padding-left: 1em;
+.request-info-rows {
+    position: absolute;
+    top: 0;
+    left: 33.333%;
+    width: 66.667%;
+    height: 100%;
+}
+
+.requests-info-row {
+    position: relative;
+    width: 100%;
+    height: 2em;
+    line-height: 2em;
+}
+
+.requests-info-row:nth-child(odd) {
+    background-color: #E53935;
+}
+
+.requests-info-item {
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    text-align: center;
+}
+
+.requests-info-name {
+    left: 0;
+}
+
+.requests-info-data {
+    left: 50%;
+}
+
+.requests-info-table-title, .requests-info-table-row-title, .requests-info-table-row-data {
+    width: 33.333%;
 }
 
 .language-selection-wrapper {
@@ -179,7 +219,7 @@
     display: inline-block;
     bottom: 2em;
     left: 0;
-    width: 20%;
+    width: 100%;
     height: 7em;
     background-color: #4CAF50;
     overflow-x: hidden;
@@ -213,4 +253,10 @@
 
 .language-selection-option:nth-child(even) {
     background-color: #2E7D32;
+}
+
+.text-overflow-ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
